sshd/sshd.yaml
# Generate CM with user keys:
# kubectl create configmap user-keys --from-file=user-keys

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: sshd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sshd
    spec:
        containers:
        - name: sshd
          image: docker.io/panubo/sshd:latest
          volumeMounts:
            - name: user-keys
              mountPath: /etc/authorized_keys
            - name: host-keys
              mountPath: /etc/ssh/keys
        volumes:
        - name: user-keys
          configMap:
            name: user-keys
        - name: host-keys
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: sshd
  labels:
    app: sshd
spec:
  selector:
    app: sshd
  ports:
  - name: ssh
    port: 22
    protocol: TCP
